[project]
name = "rest-api-hm14"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexandraMelnyk",email = "demaniya.s@stud.op.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "7.2"

